# torch_videoprism

./: .gitignore  README.md  hubconf.py  pyproject.toml
tests/: bench_inference.py  bench_inference_full.py  bench_vs_jax.py  extract_fixture_jax.py  extract_pe_fixture_jax.py  test_components.py  test_deep_parity.py  test_e2e_parity.py  test_pe_parity.py
torch_videoprism/: __init__.py  model.py  weights.py
torch_videoprism/hf/: __init__.py  build_repo.py  configuration_videoprism.py  modeling_videoprism.py  processing_videoprism.py
